--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/fredie7"]
     path = src/fredie7
-    url = https://github.com/fredie7/diabetes_diagnostics_client
+    url = git://github.com/fredie7/diabetes_diagnostics_client
