--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dist"]
-    path = dist
+[submodule "src"]
+    path = src
     url = git://github.com/fredie7/diabetes_diagnostics_client.git
